# wheezy.captcha

./: .gitignore  .hgignore  .travis.yml  Makefile  README  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  release.yml  tests.yml
demos/: app.py  app_http.py  app_web.py  sample.py  shared.py
doc/: conf.py  examples.rst  gettingstarted.rst  index.rst  modules.rst  userguide.rst
i18n/: captcha.po
i18n/en/LC_MESSAGES/: captcha.po
i18n/ru/LC_MESSAGES/: captcha.po
requirements/: dev-py2.txt  dev-py3.txt  dev.in  dev.txt  docs.in  docs.txt
src/wheezy/captcha/: __init__.py  bezier.py  comp.py  http.py  image.py  mixin.py
src/wheezy/captcha/tests/: test_bezier.py
